# my-first-rust-web-app

./: Cargo.toml  LICENSE  README.md
assets/: index.html
src/: main.rs
templates/: currency.tpl  meter2feet.hbs  meter2feet.tpl
